Fix bug in handling of parse tree->NFA construction
Superfluous epsilon transition to success state was being added